--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>NBICT LAB session Jan-Mar,2021,Batch-01</title>
+        <link rel="stylesheet" href="style.css" class="text/css">
     </head>
     <body>
-        <h1 style="color:rgb(4, 146, 156);">North Bengal Information and Communication Technology Laboratory</h1>
+        <h1>Commonly Operated Machine Particularly Used For<br>
+             Technical Education and research</h1>
     </body>
 </html>
