--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
          
         </div>
     </nav>
+    <section class="home" id="home">
+        <div class="max-width">
+            <div class="home-content">
+                <div class="text-1">HELLO, MY NAME IS</div>
+                <div class="text-2">ABU SHAID</div>
+                <div class="text-3">AND I AM<span>WEB DEVELOPER</span></div>
+            </div>
+        </div>
+    </section>
+    <p>lorem ipsum dolor sit amet consectetur adipisicing elit.Mollita,Voluptas.tempora,explicabo presentatium minima excercitationem animi velsoluta explicabo consequten non ca nihils qui ad voluptatibus member nemo exceptari expeditial. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit corporis aliquid distinctio optio amet in explicabo expedita, ratione quam fugiat! Repellat, nobis vel. Quaerat dignissimos sed tempora, dolorem odio provident neque debitis facilis vel voluptate? Necessitatibus ullam nam eveniet quos enim! Incidunt, dolore vero aliquid ipsum quod culpa sit voluptas natus cumque consectetur provident, architecto ratione pariatur suscipit doloremque similique quas quaerat cum perferendis iure temporibus. Eaque, explicabo! Architecto deleniti, perspiciatis suscipit, voluptas, vel vitae esse voluptatum ea quisquam ullam consequuntur aliquam nemo aspernatur impedit velit. Cupiditate non voluptas nesciunt cum necessitatibus aspernatur dicta illum, expedita consectetur at odio reprehenderit et sit assumenda sequi mollitia incidunt fuga saepe omnis recusandae harum facilis quibusdam? Est ea inventore fugiat velit quod repudiandae sint laudantium dolorum quam, voluptatibus tenetur deleniti maxime rem harum voluptate distinctio nulla! Soluta corporis rerum nam incidunt laborum magnam, libero dolor repellendus suscipit excepturi reprehenderit nostrum sunt vero eaque sint magni ullam maxime explicabo dolorem? Cum, omnis maxime explicabo hic iusto voluptatem nam modi rem harum ea optio ab, sed, reiciendis ipsa alias placeat doloremque voluptatibus reprehenderit. Esse nulla tenetur ducimus nostrum ipsa mollitia dignissimos molestias enim repellendus animi quidem cum, iusto iure officia voluptatem eveniet quo porro natus?</p>
     
 </body>
 </html>
